feat: add generos endpoint
