# go/models/genero.go
@@ -1,6 +1,7 @@
 package models
 
 import (
+	"gin-restapi/schemas"
 	"time"
 )
 
@@ -9,4 +10,8 @@ type Genero struct {
 	Descricao string `gorm:"not null;default:null"`
 	CreatedAt time.Time
 	UpdatedAt time.Time
+}
+
+func (g *Genero) UpdateFromInput(s *schemas.GeneroInput) {
+	g.Descricao = s.Descricao
 }
