# go/schemas/schemas.go
@@ -10,6 +10,10 @@ type EditoraInput struct {
 	Localidade string
 }
 
+type GeneroInput struct {
+	Descricao string
+}
+
 type SingleResourceUri struct {
 	ID uint `uri:"id" binding:"required"`
 }
